core: Add formats %{z} and %{strftime-format} to ErrorLogFormat.  PR 62161.

%{z} prints the timezone offset (i.e. "[+-]nnnn") and %{strftime-format} allows
any %-format handled by [apr_]strftime().

* include/util_time.h():
  Define new AP_CTIME_OPTION_GMTOFF option for ap_recent_ctime_ex().

* server/util_time.c(ap_recent_ctime_ex):
  Handle AP_CTIME_OPTION_GMTOFF to print "[+-]nnnn" timezone.

* server/log.c(log_ctime):
  If the format contains a '%' it's for strftime(), otherwise it's builtin
  with new 'z' as AP_CTIME_OPTION_GMTOFF.



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1908380 13f79535-47bb-0310-9956-ffa450edef68